--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "guiapress",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +20,7 @@
     "nodemon": "^2.0.1",
     "sequelize": "^5.21.0",
     "slugify": "^1.3.5"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
